--- a/src/background-block/css/main.css
+++ b/src/background-block/css/main.css
@@ -47,15 +47,17 @@ body {
 
 @keyframes block-animation {
     0% {
-        transform: scale(0) translateY(0px);
+        opacity: 0;
+        transform: scale(0) translateY(1000px);
     }
     50% {
-        transform: scale(1) translateY(100px);
+        opacity: 1;
         background: url(../img/background.jpg);
         background-position: center;
         background-attachment: fixed;
     }
     100% {
+        opacity: 1;
         transform: scale(1) translateY(0px);
         background: url(../img/background.jpg);
         background-position: center;
