--- a/src/img-flip/css/main.css
+++ b/src/img-flip/css/main.css
@@ -8,6 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     height: calc(100vh);
+    overflow: hidden;
 }
 
 .flip-wrapper {
