--- a/src/rotate/css/main.css
+++ b/src/rotate/css/main.css
@@ -3,6 +3,10 @@ html, body {
     padding: 0;
 }
 
+body {
+    background: rgba(20, 20, 20, 0.801);
+}
+
 body section {
     display: flex;
     justify-content: center;
@@ -13,28 +17,40 @@ body section {
 .rotate-wrapper {
     width: 250px;
     height: 250px;
+    animation: rotate-wrapper-animation 1s linear 0s infinite;
+}
+
+@keyframes rotate-wrapper-animation {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    100% {
+        filter: hue-rotate(360deg);
+    }
 }
 
 .rotate-point {
     position: absolute;
-    width: 0;
-    height: 0;
-    background-color: rgb(116, 114, 114);
-    border: 10px solid rgb(116, 114, 114);
-    border-radius: 50%;
-    transform: rotate(calc(var(--i) * 18deg));
-    transform-origin: 125px;
-    top: calc(50% - 10px);
-    animation: point-animation 1s linear calc(var(--i) * 0.05s) infinite;
-}
+    width: 20px;
+    height: 5px;
+    border-radius: 10px;
+    background-color: rgb(82, 218, 55);
+    transform: scale(0) rotate(calc(var(--i) * 18deg));
+    transform-origin: 0px;
+    top: 50%;
+    left: 50%;
+    animation: point-animation 1s linear calc(var(--i) * 0.05s) infinite; 
+} 
 
 @keyframes point-animation {
     0% {
         transform: scale(0) rotate(calc(var(--i) * 18deg));
-        /* transform-origin: 125px; */
+        transform-origin: 0px;
+        left: 50%;
     }
     100% {
         transform: scale(1) rotate(calc(var(--i) * 18deg));
-        /* transform-origin: 125px; */
+        transform-origin: 125px;
+        left: 0px;
     }
 }
